infra/k8s/admin-dashboard-client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-dashboard-client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-dashboard-client
  template:
    metadata:
      labels:
        app: admin-dashboard-client
    spec:
      # initContainers:
      #   - name: ssl-init
      #     image: wolmi/tools:v1.1.0
      #     command: ["sh", "-c", "openssl req -nodes -x509 -newkey rsa:4096 -keyout /tmp/ssl/key.pem -out /tmp/ssl/cert.pem -days 365 -subj '/C=SE/ST=SWE/L=Stockholm/O=Schoolable/emailAddress=gustaf-dahl@telia.com'"]
      #     volumeMounts:
      #       - name: ssl-folder
      #         mountPath: /tmp/ssl
      containers:
        - name: admin-dashboard-client
          image: us.gcr.io/schoolable-295414/admin-dashboard-client
          ports:
            - containerPort: 3000
      #     volumeMounts:
      #       - name: ssl-folder
      #         mountPath: /tmp/ssl
      #     ports:
      #       - containerPort: 3000
      # volumes:
      # - name: ssl-folder
      #   emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: admin-dashboard-client-srv
spec:
  externalIPs:
    - 34.98.79.121
  type: ClusterIP
  selector:
    app: admin-dashboard-client
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: https
