infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    # ingress.kubernetes.io/rewrite-target: /
    # kubernetes.io/ingress.class: "nginx"
    # cert-manager.io/cluster-issuer: "letsencrypt-nginx-"
    # nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   if ($host = '' ) {
    #     rewrite ^ https://www.$request_uri permanent;
    #   }
    # kubernetes.io/ingress.global-static-ip-name: "admin-dashboard"
spec:
  # tls:
  #   - secretName: ca-key-pair
  rules:
    - host: dev.schoolable.se
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          # - path: /?(.*)
          #   backend:
          #     serviceName: client-srv
          #     servicePort: 3000
    # - host: "*.schoolable.se"
    #   http:
    #     paths:
    #       - path: /?(.*)
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: auth-srv
    #             port:
    #               number: 3000
